# McCache-for-Python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Pipfile  Pipfile.bak  README.md  RELEASES.md  SECURITY.md  docker-compose.yml  pyproject.toml  pyproject.toml.sample  requirements.txt
demo/: demo_mccache.py  docker-compose.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: BACKGROUND.md  BENCHMARK.md  CONTRIBUTING.md  DESIGN.md  SAVING.md  SEQUENCE.md  TESTING.md
src/mccache/: __about__.py  __init__.py  __main__.py  pycache.py
src/pycache/: __about__.py  __init__.py  _pycache.py_
tests/: .dockerignore  Dockerfile  Pipfile  append.sh  docker-compose.yml  mcast.py  run_load_test.bat  run_test  run_test.bat  run_unit_test.bat  start_mccache.sh  test_mccache.py
tests/stress/: test_stress.py
tests/unit/: pytest_template.py  start_mccache.py  test_cache.py  test_mccache.py  test_pycache.py
