[project]
name = "McCache"
version = "0.0.1"
authors = [
  { name="Edward Lau", email="elau1004@netscape.net" },
  { name="Daniel Escobar", email="daniel.escobar1037@gmail.com" },
]
description = "McCache-for-Python"
readme = "README.md"
classifiers = [  #! Update me
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

keyword = [
  "cache",
  "cluster",
  "distributed",
  "multicast",
  "optimistic",
  "scale-out",
  "udp",
]

[project.urls]
"Homepage" = "https://github.com/McCache/McCache-for-Python"
"Bug Tracker" = "https://github.com/McCache/McCache-for-Python/issues"

# SEE: https://pypa-build.readthedocs.io/en/stable/index.html
# SEE: https://hatch.pypa.io/latest/config/build/


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.sources]
"src/mccache" = "mccache"

[tool.hatch.build]
include = [
  "LICENSE",
  "README.md",
  "*.py",
]
exclude = [
  ".*",
  ".gitignore",
  "pyproject.toml",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "tests/",
]

